objects/Git_Org_Commit__c.object
<CustomObject>
    <description>This object stores the individual commits to a Git repository executed by Copado Deployer.</description>
    <fields>
        <fullName>Changes__c</fullName>
        <label>Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commit_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Commit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Commit_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Commit Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Commit_Message__c</fullName>
        <label>Commit Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Git_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Snapshot</label>
        <referenceTo>Git_Backup__c</referenceTo>
        <relationshipName>Git_Org_Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Git_Operation__c</fullName>
        <description>The Git operation executed by the Copado.</description>
        <inlineHelpText>The Git operation executed by the Copado.</inlineHelpText>
        <label>Git Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commit Files</fullName>
                    <default>true</default>
                    <label>Commit Files</label>
                </value>
                <value>
                    <fullName>Destructive Changes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Snapshot Commits</relationshipLabel>
        <relationshipName>Git_Org_Commits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the commit. This value is updating automatically by Copado.</description>
        <inlineHelpText>The status of the commit. This value is updating automatically by Copado.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>No changes</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Commit undone</fullName>
                </value>
                <value>
                    <fullName>Commit not in branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_in_Git__c</fullName>
        <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(Git_Backup__r.Git_Repository__r.Commit_Base_URL__c)), Git_Backup__r.Git_Repository__r.Commit_Base_URL__c != &apos;&apos;),
		IF(
			AND(NOT(ISPICKVAL(Git_Backup__r.Git_Repository__r.Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(Git_Backup__r.Git_Repository__r.Git_Provider__c, &apos;Others&apos;))),
			Git_Backup__r.Git_Repository__r.Commit_Base_URL__c +  Commit_Id__c,
			IF(
				CONTAINS(Git_Backup__r.Git_Repository__r.Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),
				SUBSTITUTE(Git_Backup__r.Git_Repository__r.Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,Commit_Id__c),
				Git_Backup__r.Git_Repository__r.Commit_Base_URL__c + Commit_Id__c
			)
		),
	&apos;&apos;), 
	Commit_Id__c
)</formula>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <label>Snapshot Commit</label>
    <nameField>
        <displayFormat>Cmt-{0000}</displayFormat>
        <label>Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Commit_Id_Status_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !ISBLANK(Commit_Id__c), OR(ISPICKVAL(Status__c,&quot;Pending&quot;),ISPICKVAL(Status__c,&quot;No changes&quot;)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The commit status cannot be &apos;Pending&apos; or &apos;No changes&apos; whenever there is a commit Id.</errorMessage>
    </validationRules>
</CustomObject>